# PyAgent

./: .agent_global_context.json  .agent_knowledge_index.json  .agent_telemetry.json  .codeignore  .env.template  .execution_strategy.json  .flake8  .gitignore  .idea_index.json  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  BATCH2_CONTINUOUS_EXECUTION_PLAN.json  BATCH_MANIFEST.json  CHANGELOG.md  COMPREHENSIVE_EXECUTION_PLAN.md  CONTINUOUS_EXECUTION_DASHBOARD.md  CONTRIBUTING.md  CRON_JOB_CONFIRMED_ACTIVE.md  EXECUTION_ARTIFACTS_INDEX.md  EXECUTION_CHECKPOINT.json  EXECUTION_COMPLETE_79.md  EXECUTION_COMPLETE_FINAL_REPORT.md  EXECUTION_DASHBOARD.md  EXECUTION_DAY_1_LOG.json  EXECUTION_LOG_001.json  EXECUTION_LOG_PHASE1_BATCH2.json  EXECUTION_MANIFEST.json  EXECUTION_PHASE_COMPLETION_REPORT.json  EXECUTION_PLAN_SCHEDULED.json  EXECUTION_QUICKSTART.md  EXECUTION_READY_SUMMARY.md  EXECUTION_REPORT_DETAILED.json  EXECUTION_STATUS_LIVE.md  EXECUTION_SUMMARY.md  EXECUTION_TRACKER_LIVE.json  FINAL_STATUS_CONTINUOUS_EXECUTION.md  FIRST_BATCH.json  HERMES_INTEGRATION_COMPLETE.md  HERMES_INTEGRATION_MANIFEST.json  (+304 more)
.agent_memory_db/: chroma.sqlite3
.cleanup_archive/: apply_basic_types.py  (+69 more)
generated_implementations/idea000004/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea000004/src/: __init__.py
generated_implementations/idea000004/tests/: test_idea000004.py
generated_implementations/idea000022/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea000022/src/: __init__.py
generated_implementations/idea000022/tests/: test_idea000022.py
generated_implementations/idea000040/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea000040/src/: __init__.py
generated_implementations/idea000040/tests/: test_idea000040.py
generated_implementations/idea000053/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea000053/src/: __init__.py
generated_implementations/idea000053/tests/: test_idea000053.py
generated_implementations/idea000055/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea000055/src/: __init__.py
generated_implementations/idea000055/tests/: test_idea000055.py
generated_implementations/idea206564/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/idea206564/src/: __init__.py
generated_implementations/idea206564/tests/: test_idea206564.py
generated_implementations/merged-0000006/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/merged-0000006/src/: __init__.py  core.py
generated_implementations/merged-0000006/tests/: test_merged-0000006.py
generated_implementations/merged-0000016/: PROJECT_METADATA.json  README.md  pyproject.toml  setup.py
generated_implementations/merged-0000016/src/: __init__.py
generated_implementations/merged-0000016/tests/: test_merged-0000016.py
rust_core/: Cargo.toml  __init__.py  check_tx.py  check_tx2.py  gen_register.py  test_rust_core.py
rust_core/benches/: stats_baseline.rs
rust_core/crdt/: Cargo.toml
rust_core/crdt/src/: main.rs
rust_core/p2p/: Cargo.toml
rust_core/p2p/libp2p-yamux/: Cargo.toml
rust_core/p2p/libp2p-yamux/src/: lib.rs
rust_core/p2p/src/: main.rs
rust_core/runtime/: Cargo.toml
rust_core/runtime/src/: lib.rs
rust_core/scripts/: debug_backup.py
rust_core/security/: Cargo.toml
rust_core/security/src/: main.rs
rust_core/src/: agents.rs  analysis.rs  async_runtime.rs  async_transport.rs  attention.rs  auction.rs  base.rs  config.rs  connectivity.rs  distributed.rs  formula.rs  fs.rs  hardware.rs  inference.rs  kv.rs  lib.rs  lib.rs.bak  memory.rs  metrics.rs  multimodal.rs  mux.rs  neural.rs  quantlora.rs  registry.rs  scheduling.rs  search.rs  security.rs  shell.rs  stats.rs  template.rs  text.rs  time.rs  utils.rs  validation.rs  watcher.rs  workspace.rs
rust_core/src/agents/: auction.rs  byzantine.rs  coder.rs  compliance.rs  consensus.rs  economy.rs  graph.rs  knowledge.rs  lesson.rs  localization.rs  memory.rs  pruning.rs  quality.rs  quantum.rs  redqueen.rs  research.rs  search.rs  stability.rs  synapse.rs  task.rs  tool.rs  web.rs
rust_core/src/base/: auth.rs  autonomy.rs  convergence.rs  error_mapping.rs  identity.rs  io.rs  logging.rs  privacy.rs  pruning.rs  resilience.rs  verification.rs
rust_core/src/inference/: attention.rs  cache.rs  distributed.rs  engine.rs  hashing.rs  input.rs  layers.rs  lora.rs  memory.rs  metrics.rs  moe.rs  ngram.rs  platform.rs  pooling.rs  queue.rs  registry.rs  sampling.rs  scheduler.rs  stats.rs  tokenizer.rs  tools.rs  verification.rs  weights.rs
rust_core/src/inference/sampling/: filtering.rs  grammar.rs  speculative.rs  strategies.rs
rust_core/src/multimodal/: audio.rs  container.rs  distributed.rs  grammar.rs  image.rs  mod.rs
rust_core/src/multimodal/image/: composite.rs  filters.rs  processing.rs  stream.rs
rust_core/src/neural/: cache.rs  clustering.rs  config.rs  inference_utils.rs  layers.rs  network.rs  ops.rs  transformer.rs  types.rs
rust_core/src/quantlora/: attention.rs  lifecycle.rs  lora.rs  quantization.rs  sampling.rs  utils.rs
rust_core/src/security/: auth_helpers.rs  crypto.rs  hmac_keys.rs  injection.rs  patterns.rs  secrets.rs  text_analysis.rs  vulnerability.rs
rust_core/src/security/crypto/: crypto_tests.rs
rust_core/src/stats/: general.rs  metrics.rs  profiling.rs  stability.rs  tracing.rs
rust_core/src/text/: analysis.rs  graph.rs  knowledge.rs  matching.rs  nlp.rs  processing.rs  search.rs  stats.rs
rust_core/src/transport/: identity.rs  mod.rs  utm_ports.rs
rust_core/src/transport/channel/: loopback.rs  mod.rs  quic.rs
rust_core/src/transport/peer/: handshake.rs  link.rs  mod.rs
rust_core/src/utils/: fs.rs  hash.rs  json.rs  math.rs  metrics.rs  search.rs  sim.rs  system.rs  tensor.rs  text.rs  validation.rs
rust_core/tests/: security_core_test.py  test_security_core.py
rust_core/vscode/: tasks.json
(+1340618 files in other folders)
