[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyagent"
version = "4.4.0"
description = "Autonomous Multi-Agent Swarm Framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "PyAgent Team", email = "core@pyagent.dev" }
]
keywords = ["ai", "agents", "swarm", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "anthropic>=0.71.0",
    "cryptography>=46.0.5",
    "dnslib>=0.9.23",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=1.26.0",
    "openai>=1.60.0",
    "pandas>=2.2.0",
    "psutil>=6.1.1",
    # Keep pydantic/chromadb versions compatible on Python 3.14+.
    "pydantic>=2.13.0",
    "chromadb>=0.5.0",
    "pyzmq>=26.2.0",
    "requests>=2.32.0",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "SQLAlchemy>=2.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0", # Optional, but good to list
    "tqdm>=4.67.0",
    "websockets>=14.0.0",
    "censys>=2.2.0",
]

[project.scripts]
auto-fix = "auto_fix.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "Pillow",  # required by many tests
]
rust = [
    "maturin>=1.7.0",
]

[tool.uv]
# Optimization for 'uv' package manager
cache-keys = [{ file = "requirements.txt" }]

[tool.ruff]
# ruff configuration lives here; older versions (including 0.15.x) expect
# all lint-related keys directly in this table. hyphenated names are
# required for compatibility.

line-length = 120
target-version = "py312"
exclude = ["src-old/**", "scripts-old/**", ".agents/**", ".cleanup_archive/**"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "ANN", # flake8-annotations
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "N999", # allow non-snake module names (legacy)
    "ANN401", # allow Any in annotations where needed
    "D107", # missing __init__ docstring
    "ANN204", # missing return type on __init__
    "D205", # blank line after summary
    "D102", # missing docstring in public method
    "D401", # docstring mood
    "F401", # unused imports
    "E402", # import not at top
    "ANN201", # missing type on placeholder
    "D103", # missing docstring public function
    "ANN001", # missing type annotation for argument
]


[tool.mypy]
python_version = "3.12"
strict = true
# ignore_errors is deliberately OFF; CI will invoke mypy only on specific
# packages or run in warning-only mode so that existing issues don’t block
disallow_untyped_defs = false  # relaxed for gradual adoption
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

# Exclude the 'generated' directory from mypy checks, as generated code might not always be fully type-hinted
exclude = ["generated/"]

# keep external imports from causing failures
ignore_missing_imports = true  # avoid errors on generated / external modules

# per-module overrides allow us to progressively tighten the checks
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true  # tests are free-form for now

[[tool.mypy.overrides]]
module = "src-old.*"
ignore_errors = true  # legacy code being phased out

[[tool.mypy.overrides]]
module = "src.core.base.*"
strict = true  # apply full strictness to the core package

# You can add specific overrides for modules or packages if needed, for example:
# [[tool.mypy.overrides]]
# module = "src.core.base.*"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=strict"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
