[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
regex = "1.10"
chrono = "0.4"
walkdir = "2.4"
serde_json = "1.0"
glob = "0.3"
sysinfo = "0.30"
ndarray = { version = "0.15", features = ["rayon"] }
md-5 = "0.10"
rand_distr = "0.4"
rayon = "1.8"
base64 = "0.22.1"

[features]
amd_npu = []
default = []
