[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
once_cell = "1.17"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
regex = "1.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = "0.6"
walkdir = "2.4"
serde_json = "1.0"
glob = "0.3"
sysinfo = "0.30"
ndarray = { version = "0.15", features = ["rayon"] }
md-5 = "0.10"
rand_distr = "0.4"
rayon = "1.8"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.14"
chrono = { version = "0.4", features = ["serde"] }
evalexpr = "11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
dashmap      = "6"
zeroize      = { version = "1", features = ["derive"] }
uuid         = { version = "1", features = ["v4"] }
subtle       = "2"

[dev-dependencies]
tempfile = "3.5"

[features]
amd_npu = []
default = []
