[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea206564"
version = "0.1.0"
description = "idea206564 - orjson-3.11.6-cp312-cp312-macosx-10-15-x86-64.macosx-11-0-arm64.macosx-10-15-universal2"
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
