[package]
name = "rust_core_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = {
    version = "0.56", 
    features = [
        "tcp", 
        "dns", 
        "identify", 
        "ping", 
        "mdns", 
        "noise", 
        "yamux"
    ] }
    features = ["tokio", "tcp", "dns", "identify", "ping", "mdns", "noise", "yamux"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
