[package]
name = "runtime"
version = "0.1.0"
authors = ["PyAgent Authors <core@pyagent.dev>"]
edition = "2021"

[lib]
name = "runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
once_cell = "1.21.3"

[dev-dependencies]
# none yet
